--- a/end.html
+++ b/end.html
@@ -32,6 +32,6 @@
         <a class="btn" href="/">Go Home</a>
       </div>
     </div>
-    <script src="end.js"></script>
+    <script src="assets/js/end.js"></script>
   </body>
 </html>
