--- a/game.html
+++ b/game.html
@@ -51,6 +51,6 @@ contributor
         </div>
       </div>
     </div>
-    <script src="game.js"></script>
+    <script src="assets/js/game.js"></script>
   </body>
 </html>
