--- a/game.html
+++ b/game.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <div class="container">
+      <h2>00:00</h2>
+    </div>
+    <div class="container">
       <div id="loader"></div>
       <div id="game" class="justify-center flex-column hidden">
         <div id="hud">
@@ -30,6 +33,7 @@
             </h1>
           </div>
         </div>
+       
         <h2 id="question"></h2>
         <div class="choice-container">
           <p class="choice-prefix">A</p>
