--- a/game.html
+++ b/game.html
@@ -10,8 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>00:00</h2>
-    </div>
+      <h1 Id=timer>00:00</h1>
     <div class="container">
       <div id="loader"></div>
       <div id="game" class="justify-center flex-column hidden">
@@ -52,6 +51,8 @@
           <p class="choice-text" data-number="4"></p>
         </div>
       </div>
+    </div>
+ 
     </div>
     <script src="assets/js/game.js"></script>
   </body>
