--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Quick Quiz - Play</title>
+    <title>Play</title>
     <link rel="stylesheet" href="assets/css/style1.css" />
     <link rel="stylesheet" href="assets/css/style2.css" />
   </head>
